config: add defaults.alerts.enabled setting
This allows users to opt-in to receiving alerts from their tools.

Bug: T432864
