# components/models/api_models.py
@@ -60,6 +60,24 @@ class ConfigVersion(str, Enum):
     V1_BETA1 = "v1beta1"
 
 
+class ConfigAlerts(BaseModel):
+    enabled: Annotated[
+        bool,
+        Field(
+            description="Enable if you want to receive emails for tool alerts (beta feature)",
+        ),
+    ] = False
+
+
+class ConfigDefaults(BaseModel):
+    alerts: Annotated[
+        ConfigAlerts,
+        Field(
+            description="Values that will apply to all the components of the tool. Per-component overrides will be supported in the future.",
+        ),
+    ] = ConfigAlerts()
+
+
 class SourceBuildInfo(BaseModel):
     repository: AnyGitUrl = Field(
         description="URL of the public git repository with the code to build.",
@@ -292,8 +310,13 @@ class ToolConfig(BaseModel):
         ),
         json_schema_extra=remove_default_from_schema,
     )
+    defaults: Annotated[
+        ConfigDefaults,
+        Field(
+            description="Some fields that will apply tool-wide",
+        ),
+    ] = ConfigDefaults()
     components: dict[str, ComponentInfo] = Field(
-        ...,
         description=(
             "List of components to run. Each component matches a continuous job, scheduled job, one-off job or "
             "webservice."
@@ -475,6 +498,7 @@ GetToolsWithConfigResponse = ApiResponse[GetToolsWithConfigData]
 
 
 EXAMPLE_GENERATED_CONFIG = ToolConfig(
+    defaults=ConfigDefaults(alerts=ConfigAlerts(enabled=False)),
     components={
         "my-backend-service-1": ContinuousComponentInfo(
             component_type="continuous",
@@ -531,5 +555,5 @@ EXAMPLE_GENERATED_CONFIG = ToolConfig(
                 schedule="@daily",
             ),
         ),
-    }
+    },
 )
